Fri Oct 15 23:59:46 2004  Tim Janik  <timj@gtk.org>

	* sfiprimitives.[hc]: 
	sfi_pointer_cmp(): renamed from sfi_compare_pointers(), changed users.
	sfi_ring_uniq(): made this an ring modifying rather than copying
	function. this plugs some leaks in current function usages.
	sfi_ring_copy_uniq(): copy ring and remove duplicates.

	* testsfi.c: adapt to sfi_ring_uniq() modifying inplace now.

Wed Oct 13 18:50:19 2004  Tim Janik  <timj@gtk.org>

	* sfithreads.[hc]: reworked hazard pointer guard API.
	sfi_guard_register(): provide an array of hazard pointers in
	O(1) time if this thread previously deregistered an array
	of sufficient size.
	sfi_guard_protect(): renamed from sfi_guard_store(), require
	array index to adress hazard pointer within guard.
	sfi_guard_n_snap_values(): renamed.
	sfi_guard_snap_values(): renamed, provide ordering guarantee.
	sfi_guard_is_protected(): provide ordering guarantee.

Tue Oct 12 10:58:21 2004  Tim Janik  <timj@gtk.org>

	* sfithreads.[hc]: implemented hazard pointers or thread guards.
	sfi_thread_handle_deleted(): clear thread data after the wakeup destroy
	function has been called. deregister all thread guards.
	sfi_guard_deregister():
	sfi_guard_register(): register/deregister guards.
	sfi_guard_store(): protect a pointer via a guard.
	sfi_guard_get_n_values(): number of values for collection.
	sfi_guard_collect(): collected protected pointers.
	sfi_guard_is_protected(): check single pointer protection.

Fri Oct  8 06:49:42 2004  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc]: removed g_strconcat_with_null() which used to work 
	around a GLib-2.4 bug.
	added g_static_assert() to perform compile time assertions.

Tue Oct  5 22:48:52 2004  Tim Janik  <timj@gtk.org>

	* sficxx.h: 
	* sfivalues.c:
	* sfidl-corec.cc:
	* glib-extra.h: did code cleanups possible with Glib-2.4.

Mon Oct  4 03:44:03 2004  Tim Janik  <timj@gtk.org>

	* sfiparams.c: fixed param-spec leaks.

	* sfilog.[hc]: changed logging to use a handler per-thread.
