@@ -1,3 +1,8 @@
+Mon Nov 15 20:10:06 2004  Tim Janik  <timj@gtk.org>
+
+	* sfitime.c (sfi_time_from_string_err): fixed up mktime() usage by
+	temporarily unsetting $TZ, use timgm() if available.
+
 Fri Oct 15 23:59:46 2004  Tim Janik  <timj@gtk.org>
 
 	* sfiprimitives.[hc]: 
